<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kruger Cuisine</string>
    <string name="nav_header_subtitle">support@kruger_cuisine.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Reservation</string>
    <string name="menu_slideshow">Cancel Reservation</string>
    <string name="menu_RestHours">Restaurant Timings</string>
    <string name="menu_viewMenu">Food and Beverages</string>
    <string name="menu_QR">Special Offers</string>
    <string name="menu_chat">Chat</string>
</resources>