<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_RestHours"
            android:title="@string/menu_RestHours" />
        <item
            android:id="@+id/nav_viewMenu"
            android:title="@string/menu_viewMenu" />
        <item
            android:id="@+id/nav_QR"
            android:title="@string/menu_QR" />
        <item
            android:id="@+id/nav_chat"
            android:title="@string/menu_chat" />

    </group>
</menu>